traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:14: error: Invalid literal number
  setPos(x+1,+1y)
              ^TraversalZigZag:14: error: illegal start of simple expression
  setPos(x+1,+1y)
              ^TraversalZigZag:20: error: ')' expected but '}' found.
} 
^