traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var cpt:Int=0
  var x:Int=0
  var y:Int=0
  var i:Int=0

	ecritMessage(cpt)

  for(cpt<- 1 to 6){
    x=getX()
 		y=getY()
    parcours2()
    ecritMessage(cpt)
  }
  setPos(x+1,+1y)
  cpt+=1
  ecritMessage(cpt)

  
  
} 


def parcours1(){
  var x:Int=0
  var y:Int=0
  x=getX()
  y=getY()
  setPos(x-1,y)   
}
def parcours2(){
  var x:Int=0
  var y:Int=0
  x=getX()
  y=getY()
  setPos(x+1,y)  
}


def positionTest():Boolean={
  if(getMondeHauteur()-1==getY() && getMondeLargeur()-1==getX()){
    return true
  }else {
    return false
  }
  
}